2007-03-29  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/*.[h,m]: corrected licenses
	
2007-03-26  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/DOMCore.m,
	Sources/WebXMLDocumentRepresentation.h,
	Sources/WebXMLDocumentRepresentation.m,
	Sources/WebHTMLDocumentView.h,
	Sources/WebHTMLDocumentView.m,
	Sources/WebImageDocumentRepresentation.h,
	Sources/DOMHTML.h,
	Sources/DOMHTML.m,
	Sources/WebDOMOperations.h,
	Sources/WebFrameLoadDelegate.h: updated from myStep

2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
	* DOMRange.*, DOMCSS.h, GNUMakefile:
	added files from myStep

2007-03-21  Riccardo Mottola <riccardo@kaffe.org>
	* WebArchive.*, WebDownload.h, GNUMakefile:
	added files from myStep
	
2007-03-20  Riccardo Mottola <riccardo@kaffe.org>

	* Sources/WebDocumentRepresentation.h,
	Sources/WebDocumentRepresentation.m,
	Sources/WebCSSDocumentRepresentation.h,
	Sources/WebCSSDocumentRepresentation.m:
	added from myStep

2007-03-13  Rrichard Frith-Macdonald <fm@gnu.org>

	* Sources/NSXMLParser.h:
	* Sources/GNUmakefile:
	* Sources/NSXMLParser.m:
	* Sources/WebHTMLDocumentRepresentation.m: Use standard NSXMLParser
	API rather than duplicating code.
	* Sources/WebFrame.m: Fix broken include that was stopping compile.

2007-03-08  Riccardo Mottola <riccardo@kaffe.org>

	* Sources/GNUmakefile: Added missing classes and headers.


2007-03-08  Riccardo Mottola <riccardo@kaffe.org>

	* Sources/*.[h,m]: updated FSF copyright and LGPL license

2007-03-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SimpleWebKit_INCLUDE_DIRS): Variable removed.
	* Sources/GNUmakefile (SimpleWebKit_INCLUDE_DIRS): Variable removed.
	* Sources/GNUmakefile (SimpleWebKit_HEADER_FILES): Added DOMCore.h