@@ -23,19 +23,30 @@
 
 #import <Cocoa/Cocoa.h>
 
+typedef enum _WebScriptPropertyAttribute
+{ // 8.6.1
+	WebScriptPropertyAttributeReadOnly = 0x0001,
+	WebScriptPropertyAttributeDontEnum = 0x0002,
+	WebScriptPropertyAttributeDontDelete = 0x0004,
+	WebScriptPropertyAttributeReadInternal = 0x8000			// not really used
+} WebScriptPropertyAttribute;
+
+
 @interface WebScriptObject : NSObject
-{
+{ // a generic script object
 }
 
 + (BOOL) throwException:(NSString *) message;
 
-- (id) callWebScriptMethod:(NSString *) name withArguments:(NSArray *) args;
 - (id) evaluateWebScript:(NSString *) script;
+
+- (id) callWebScriptMethod:(NSString *) name withArguments:(NSArray *) args;
 - (void) removeWebScriptKey:(NSString *) key;
-- (void) setException:(NSString *) message;
 - (void) setWebScriptValueAtIndex:(unsigned int) index value:(id) value;
-- (NSString *) stringRepresentation;
 - (id) webScriptValueAtIndex:(unsigned int) index;
+
+- (void) setException:(NSString *) message;
+- (NSString *) stringRepresentation;
 
 	// KVC
 
@@ -45,6 +56,7 @@
 @end
 
 @interface NSObject (WebScripting)
+
 + (BOOL) isKeyExcludedFromWebScript:(const char *) name;
 + (BOOL) isSelectorExcludedFromWebScript:(SEL) sel;
 + (NSString *) webScriptNameForKey:(const char *) name;
@@ -52,5 +64,7 @@
 - (void) finalizeForWebScript;
 - (id) invokeDefaultMethodWithArguments:(NSArray *) args;
 - (id) invokeUndefinedMethodFromWebScript:(NSString *) name
-							withArguments:(NSArray *) args;
+														withArguments:(NSArray *) args;
+
 @end
+
